# flnr

./: .gitignore  LICENSE  pyproject.toml  readme.md  repo.py
.github/workflows/: workflow.yml
docs/: conf.py  index.rst
src/flnr/: __init__.py  _observatory.py  exceptions.py  flnr.py  monitors.py  mu.py
tests/: conftest.py  test_impl_textoutmon.py  test_internal_event_pid_guard.py  test_loggers.py  test_monitor_errors.py  test_mu_ils.py  test_observatory.py  test_output_drain.py  test_output_drain_stressors.py  test_output_monitoring.py  test_process_monitoring.py  test_readme_examples.py  test_runner.py  test_slow_observers.py  test_timeouts.py
tests/extra/: really_borken.py  test_extra.py
tests/lib/: binmon.py  proc_mock.py  text_output_mon.py  utils.py
tests/resources/data/: invalid_utf8.txt  miami_nights.txt
tests/resources/exec/: cat_dev_random.py  drain_stressor.py  env_printout.py  ln_print.py  output_forwarding.py  print_file.py  sigterm_ignore.py  stderr_output.py  stderrstdout_output.py  stdout_forwarding.py
